--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = platform_wasm
-version = attr: platform_wasm.__version__
+version = attr: platform_wasm.VERSION
 author = Paul Peny
 description = support for interfacing packages with wasm hosts.
 long_description = file: README.md
